metadata-ingestion/src/datahub/ingestion/source/thrift/parse_tools/thriftParser.py
# Generated from thrift.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class thriftParser ( Parser ):

    grammarFileName = "thrift.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'include'", "'namespace'", "'*'", "'cpp_namespace'", 
                     "'php_namespace'", "'cpp_include'", "'const'", "'='", 
                     "'typedef'", "'enum'", "'{'", "'}'", "'senum'", "'struct'", 
                     "'union'", "'exception'", "'service'", "'extends'", 
                     "':'", "'required'", "'optional'", "'('", "')'", "'oneway'", 
                     "'async'", "'void'", "'throws'", "'map'", "'<'", "'>'", 
                     "'set'", "'list'", "'cpp_type'", "'['", "']'", "';'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'bool'", "'byte'", 
                     "'i16'", "'i32'", "'i64'", "'double'", "'string'", 
                     "'binary'", "<INVALID>", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGER", "HEX_INTEGER", "DOUBLE", "TYPE_BOOL", 
                      "TYPE_BYTE", "TYPE_I16", "TYPE_I32", "TYPE_I64", "TYPE_DOUBLE", 
                      "TYPE_STRING", "TYPE_BINARY", "LITERAL", "IDENTIFIER", 
                      "COMMA", "WS", "SL_COMMENT", "ML_COMMENT" ]

    RULE_document = 0
    RULE_header = 1
    RULE_include_ = 2
    RULE_namespace_ = 3
    RULE_cpp_include = 4
    RULE_definition = 5
    RULE_const_rule = 6
    RULE_typedef_ = 7
    RULE_enum_rule = 8
    RULE_enum_field = 9
    RULE_senum = 10
    RULE_struct_ = 11
    RULE_union_ = 12
    RULE_exception_ = 13
    RULE_service = 14
    RULE_field = 15
    RULE_field_id = 16
    RULE_field_req = 17
    RULE_function_ = 18
    RULE_oneway = 19
    RULE_function_type = 20
    RULE_throws_list = 21
    RULE_type_annotations = 22
    RULE_type_annotation = 23
    RULE_annotation_value = 24
    RULE_field_type = 25
    RULE_base_type = 26
    RULE_container_type = 27
    RULE_map_type = 28
    RULE_set_type = 29
    RULE_list_type = 30
    RULE_cpp_type = 31
    RULE_const_value = 32
    RULE_integer = 33
    RULE_const_list = 34
    RULE_const_map_entry = 35
    RULE_const_map = 36
    RULE_list_separator = 37
    RULE_real_base_type = 38

    ruleNames =  [ "document", "header", "include_", "namespace_", "cpp_include", 
                   "definition", "const_rule", "typedef_", "enum_rule", 
                   "enum_field", "senum", "struct_", "union_", "exception_", 
                   "service", "field", "field_id", "field_req", "function_", 
                   "oneway", "function_type", "throws_list", "type_annotations", 
                   "type_annotation", "annotation_value", "field_type", 
                   "base_type", "container_type", "map_type", "set_type", 
                   "list_type", "cpp_type", "const_value", "integer", "const_list", 
                   "const_map_entry", "const_map", "list_separator", "real_base_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    INTEGER=37
    HEX_INTEGER=38
    DOUBLE=39
    TYPE_BOOL=40
    TYPE_BYTE=41
    TYPE_I16=42
    TYPE_I32=43
    TYPE_I64=44
    TYPE_DOUBLE=45
    TYPE_STRING=46
    TYPE_BINARY=47
    LITERAL=48
    IDENTIFIER=49
    COMMA=50
    WS=51
    SL_COMMENT=52
    ML_COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(thriftParser.EOF, 0)

        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(thriftParser.HeaderContext)
            else:
                return self.getTypedRuleContext(thriftParser.HeaderContext,i)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(thriftParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(thriftParser.DefinitionContext,i)


        def getRuleIndex(self):
            return thriftParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = thriftParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << thriftParser.T__0) | (1 << thriftParser.T__1) | (1 << thriftParser.T__3) | (1 << thriftParser.T__4) | (1 << thriftParser.T__5))) != 0):
                self.state = 78
                self.header()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << thriftParser.T__6) | (1 << thriftParser.T__8) | (1 << thriftParser.T__9) | (1 << thriftParser.T__12) | (1 << thriftParser.T__13) | (1 << thriftParser.T__14) | (1 << thriftParser.T__15) | (1 << thriftParser.T__16))) != 0):
                self.state = 84
                self.definition()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(thriftParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_(self):
            return self.getTypedRuleContext(thriftParser.Include_Context,0)


        def namespace_(self):
            return self.getTypedRuleContext(thriftParser.Namespace_Context,0)


        def cpp_include(self):
            return self.getTypedRuleContext(thriftParser.Cpp_includeContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = thriftParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [thriftParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.include_()
                pass
            elif token in [thriftParser.T__1, thriftParser.T__3, thriftParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.namespace_()
                pass
            elif token in [thriftParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.cpp_include()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(thriftParser.LITERAL, 0)

        def getRuleIndex(self):
            return thriftParser.RULE_include_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_" ):
                listener.enterInclude_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_" ):
                listener.exitInclude_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_" ):
                return visitor.visitInclude_(self)
            else:
                return visitor.visitChildren(self)




    def include_(self):

        localctx = thriftParser.Include_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(thriftParser.T__0)
            self.state = 98
            self.match(thriftParser.LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Namespace_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return thriftParser.RULE_namespace_

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CppNamespaceContext(Namespace_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a thriftParser.Namespace_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCppNamespace" ):
                listener.enterCppNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCppNamespace" ):
                listener.exitCppNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCppNamespace" ):
                return visitor.visitCppNamespace(self)
            else:
                return visitor.visitChildren(self)


    class PhpNamespaceContext(Namespace_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a thriftParser.Namespace_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPhpNamespace" ):
                listener.enterPhpNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPhpNamespace" ):
                listener.exitPhpNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPhpNamespace" ):
                return visitor.visitPhpNamespace(self)
            else:
                return visitor.visitChildren(self)


    class StarNamespaceContext(Namespace_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a thriftParser.Namespace_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)
        def LITERAL(self):
            return self.getToken(thriftParser.LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStarNamespace" ):
                listener.enterStarNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStarNamespace" ):
                listener.exitStarNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStarNamespace" ):
                return visitor.visitStarNamespace(self)
            else:
                return visitor.visitChildren(self)


    class ExplicitNamespaceContext(Namespace_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a thriftParser.Namespace_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(thriftParser.IDENTIFIER)
            else:
                return self.getToken(thriftParser.IDENTIFIER, i)
        def LITERAL(self):
            return self.getToken(thriftParser.LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicitNamespace" ):
                listener.enterExplicitNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicitNamespace" ):
                listener.exitExplicitNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplicitNamespace" ):
                return visitor.visitExplicitNamespace(self)
            else:
                return visitor.visitChildren(self)



    def namespace_(self):

        localctx = thriftParser.Namespace_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namespace_)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = thriftParser.StarNamespaceContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(thriftParser.T__1)
                self.state = 101
                self.match(thriftParser.T__2)
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==thriftParser.LITERAL or _la==thriftParser.IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                localctx = thriftParser.ExplicitNamespaceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(thriftParser.T__1)
                self.state = 104
                self.match(thriftParser.IDENTIFIER)
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==thriftParser.LITERAL or _la==thriftParser.IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                localctx = thriftParser.CppNamespaceContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(thriftParser.T__3)
                self.state = 107
                self.match(thriftParser.IDENTIFIER)
                pass

            elif la_ == 4:
                localctx = thriftParser.PhpNamespaceContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(thriftParser.T__4)
                self.state = 109
                self.match(thriftParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cpp_includeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(thriftParser.LITERAL, 0)

        def getRuleIndex(self):
            return thriftParser.RULE_cpp_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCpp_include" ):
                listener.enterCpp_include(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCpp_include" ):
                listener.exitCpp_include(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCpp_include" ):
                return visitor.visitCpp_include(self)
            else:
                return visitor.visitChildren(self)




    def cpp_include(self):

        localctx = thriftParser.Cpp_includeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cpp_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(thriftParser.T__5)
            self.state = 113
            self.match(thriftParser.LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_rule(self):
            return self.getTypedRuleContext(thriftParser.Const_ruleContext,0)


        def typedef_(self):
            return self.getTypedRuleContext(thriftParser.Typedef_Context,0)


        def enum_rule(self):
            return self.getTypedRuleContext(thriftParser.Enum_ruleContext,0)


        def senum(self):
            return self.getTypedRuleContext(thriftParser.SenumContext,0)


        def struct_(self):
            return self.getTypedRuleContext(thriftParser.Struct_Context,0)


        def union_(self):
            return self.getTypedRuleContext(thriftParser.Union_Context,0)


        def exception_(self):
            return self.getTypedRuleContext(thriftParser.Exception_Context,0)


        def service(self):
            return self.getTypedRuleContext(thriftParser.ServiceContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = thriftParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definition)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [thriftParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.const_rule()
                pass
            elif token in [thriftParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.typedef_()
                pass
            elif token in [thriftParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.enum_rule()
                pass
            elif token in [thriftParser.T__12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.senum()
                pass
            elif token in [thriftParser.T__13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.struct_()
                pass
            elif token in [thriftParser.T__14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.union_()
                pass
            elif token in [thriftParser.T__15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.exception_()
                pass
            elif token in [thriftParser.T__16]:
                self.enterOuterAlt(localctx, 8)
                self.state = 122
                self.service()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_type(self):
            return self.getTypedRuleContext(thriftParser.Field_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def const_value(self):
            return self.getTypedRuleContext(thriftParser.Const_valueContext,0)


        def list_separator(self):
            return self.getTypedRuleContext(thriftParser.List_separatorContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_const_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_rule" ):
                listener.enterConst_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_rule" ):
                listener.exitConst_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_rule" ):
                return visitor.visitConst_rule(self)
            else:
                return visitor.visitChildren(self)




    def const_rule(self):

        localctx = thriftParser.Const_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(thriftParser.T__6)
            self.state = 126
            self.field_type()
            self.state = 127
            self.match(thriftParser.IDENTIFIER)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__7:
                self.state = 128
                self.match(thriftParser.T__7)
                self.state = 129
                self.const_value()


            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__35 or _la==thriftParser.COMMA:
                self.state = 132
                self.list_separator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typedef_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_type(self):
            return self.getTypedRuleContext(thriftParser.Field_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def type_annotations(self):
            return self.getTypedRuleContext(thriftParser.Type_annotationsContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_typedef_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef_" ):
                listener.enterTypedef_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef_" ):
                listener.exitTypedef_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef_" ):
                return visitor.visitTypedef_(self)
            else:
                return visitor.visitChildren(self)




    def typedef_(self):

        localctx = thriftParser.Typedef_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typedef_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(thriftParser.T__8)
            self.state = 136
            self.field_type()
            self.state = 137
            self.match(thriftParser.IDENTIFIER)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__21:
                self.state = 138
                self.type_annotations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def enum_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(thriftParser.Enum_fieldContext)
            else:
                return self.getTypedRuleContext(thriftParser.Enum_fieldContext,i)


        def type_annotations(self):
            return self.getTypedRuleContext(thriftParser.Type_annotationsContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_enum_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_rule" ):
                listener.enterEnum_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_rule" ):
                listener.exitEnum_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_rule" ):
                return visitor.visitEnum_rule(self)
            else:
                return visitor.visitChildren(self)




    def enum_rule(self):

        localctx = thriftParser.Enum_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enum_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(thriftParser.T__9)
            self.state = 142
            self.match(thriftParser.IDENTIFIER)
            self.state = 143
            self.match(thriftParser.T__10)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==thriftParser.IDENTIFIER:
                self.state = 144
                self.enum_field()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(thriftParser.T__11)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__21:
                self.state = 151
                self.type_annotations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_fieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(thriftParser.IDENTIFIER, 0)

        def integer(self):
            return self.getTypedRuleContext(thriftParser.IntegerContext,0)


        def type_annotations(self):
            return self.getTypedRuleContext(thriftParser.Type_annotationsContext,0)


        def list_separator(self):
            return self.getTypedRuleContext(thriftParser.List_separatorContext,0)


        def getRuleIndex(self):
            return thriftParser.RULE_enum_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_field" ):
                listener.enterEnum_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_field" ):
                listener.exitEnum_field(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_field" ):
                return visitor.visitEnum_field(self)
            else:
                return visitor.visitChildren(self)




    def enum_field(self):

        localctx = thriftParser.Enum_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enum_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(thriftParser.IDENTIFIER)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__7:
                self.state = 155
                self.match(thriftParser.T__7)
                self.state = 156
                self.integer()


            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==thriftParser.T__21:
                self.state = 159
                self.type_annotations()

